# LLMs-from-scratch

./: pyproject.toml  requirements_colab.txt  requirements_poetry.txt
appendix-A/01_main-chapter-code/: code-part1.ipynb  code-part2.ipynb  gpu-vs-cpu-performance.ipynb
ch02/01_main-chapter-code/: ch02.ipynb  dataloader.ipynb  exercise-solutions.ipynb
ch02/02_bonus_bytepair-encoder/: compare-bpe-tiktoken.ipynb
ch02/03_bonus_embedding-vs-matmul/: embeddings-and-linear-layers.ipynb
ch02/04_bonus_dataloader-intuition/: dataloader-intuition.ipynb
ch03/01_main-chapter-code/: ch03.ipynb  exercise-solutions.ipynb  multihead-attention.ipynb
ch03/02_bonus_efficient-multihead-attention/: mha-implementations.ipynb
ch03/03_understanding-buffers/: understanding-buffers.ipynb
ch04/01_main-chapter-code/: ch04.ipynb  exercise-solutions.ipynb
ch04/02_performance-analysis/: flops-analysis.ipynb
ch05/01_main-chapter-code/: ch05.ipynb  exercise-solutions.ipynb
setup/02_installing-python-libraries/: python_environment_check.ipynb
