[tool.poetry]
name = "llms-from-scratch"
version = "0.1.0"
description = ""
authors = ["Dmitry Labazkin <labdmitriy@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.3.1+cpu"
jupyterlab = ">=4.0"
tiktoken = ">=0.5.1"
matplotlib = ">=3.7.1"
tensorflow-cpu = ">=2.15.0"
tqdm = ">=4.66.1"
numpy = ">=1.25,"
pandas = ">=2.2.1"
psutil = ">=5.9.5"
transformers = "^4.42.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
